# examples

./: LICENSE  README.md
3d/octree/: CMakeLists.txt  Camera.cpp  Camera.hpp  README.md  main.cpp  savedoctree.oct
3d/octree/deprecated/: Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  SimpleFragmentShader.glsl  SimpleVertexShader.glsl
3d/octree/doc/: fractals.txt  sparse_boxel_octrees.txt
3d/octree/entity/: Chunk.cpp  Chunk.hpp  Cube.cpp  Cube.hpp  CubeWires.cpp  CubeWires.hpp  Entity.cpp  Entity.hpp  Terrain.cpp  Terrain.hpp  Voxels.cpp  Voxels.hpp
3d/octree/math/: PerlinNoise.cpp  PerlinNoise.hpp
3d/octree/octree/: Octree.cpp  Octree.hpp
3d/octree/shader/: InstancedInterleavedVertexShader.glsl  Shader.cpp  Shader.hpp  SimpleVertexShader.glsl
3d/octree/svo/: ChunkedAllocator.hpp  IVoxelData.hpp  LICENSE  Util.hpp  VoxelData.cpp  VoxelData.hpp  VoxelDataNoise.cpp  VoxelDataNoise.hpp  VoxelOctree.cpp  VoxelOctree.hpp
algorithms/: Bowl.ipynb  bowl.py
algorithms/.ipynb_checkpoints/: Bowl-checkpoint.ipynb
backend/lastminute/: .gitignore  README.md  build.gradle
backend/spring/interconnections/: LICENSE  Readme.md  pom.xml
code_interviews/lastminute/: pom.xml
code_interviews/lastminute/gradle/wrapper/: gradle-wrapper.properties
code_interviews/ravenpack/: README.md
code_interviews/ryanair/: pom.xml
ml/mouse_recognition/: README.md
ml/mouse_recognition/backend/: README.md  pyro4ns_launch.sh  recognizer.py  recognizer_launch.sh  requirements.txt
ml/mouse_recognition/model/: capture.py
ml/mouse_recognition/webapp/: .README.md.swp  README.md
ml/mouse_recognition/webapp/demo/: settings.py
ml/pytorch/: Pruebas pytorch.ipynb
security/: spectre
typescript/eater/client/: .gitignore  Gruntfile.js  bower.json  deploy.sh  index.html  index_dev.html  package-lock.json  package.json  tsd.json
typescript/eater/client/js/: libs.min.js  pelotas.js  pelotas.js.map  pelotas.min.js
typescript/eater/client/ts/: Ball.js  Ball.ts  Geometry.js  Geometry.ts  Grid.js  Grid.ts  Main.js  Main.ts  Pelotas.js  Pelotas.ts  Ring.js  Ring.ts  ShaderProgram.js  ShaderProgram.ts  WebGLContext.js  WebGLContext.ts  WebRTC.js  WebRTC.ts  reference.js  reference.ts
typescript/eater/server/: .gitignore  Gruntfile.js  index.html  package-lock.json  package.json  tsd.json
typescript/eater/server/ts/: Ball.js  Ball.ts  Ballz.js  Ballz.ts  (+16 more)
(+56 files in other folders)
